flux/apps/jellyfin/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyfin
spec:
  strategy:
    type: Recreate
    rollingUpdate: null
  selector:
    matchLabels:
      app: jellyfin
  template:
    metadata:
      labels:
        app: jellyfin
    spec:
      containers:
        - name: jellyfin
          image: jellyfin/jellyfin:latest
          ports:
            - name: http
              containerPort: 8096
            - containerPort: 8920
          livenessProbe:
            httpGet:
              path: /health
              port: 8096
            initialDelaySeconds: 120
          securityContext:
            privileged: true
          volumeMounts:
            - name: dev-dri
              mountPath: /dev/dri
            - name: config
              mountPath: /config
            - name: movies
              mountPath: /data/movies
            - name: shows
              mountPath: /data/shows
            - name: music
              mountPath: /data/music
            - name: youtube
              mountPath: /data/youtube
      volumes:
        - name: dev-dri
          hostPath:
            path: /dev/dri
            type: Directory
        - name: config
          iscsi:
            targetPortal: 192.168.0.2
            iqn: iqn.2004-04.com.qnap:ts-464:iscsi.target-0.6c68d5
            lun: 0
            fsType: ext4
            readOnly: false
        - name: movies
          nfs:
            server: 192.168.0.2
            path: /main/media/movies
            readOnly: true
        - name: shows
          nfs:
            server: 192.168.0.2
            path: /main/media/shows
            readOnly: true
        - name: youtube
          nfs:
            server: 192.168.0.2
            path: /main/media/youtube
            readOnly: true
        - name: music
          nfs:
            server: 192.168.0.2
            path: /main/media/music
            readOnly: true
